# clicks-controller

./: Cargo.toml  README.md  build.rs  cfg.txt
.cargo/: config.toml
src/: buttons.rs  events.rs  fsm.rs  graphics.rs  led.rs  main.rs  menu.rs  metronome.rs  network.rs  network2.rs  spicks.rs  state.rs  textentry.rs  translator.rs  ui.rs
