[package]
authors = ["Lexag"]
edition = "2024"
name = "clicks-controller"
version = "0.1.0"

[dependencies]
common = { git = "https://github.com/lexag/clicks-common.git", "branch" = "no-std" }
rp-pico = "0.9.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-time = "0.12.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp2040-hal = { version = "0.11.0", features=["rt", "critical-section-impl"] }
rp2040-boot2 = "0.2.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
embedded-hal ="0.2.5"
panic-halt= "0.2.0"
critical-section = "1.2"
ssd1306 = "0.10.0"
embedded-graphics = "0.8.1"
embedded-menu = "0.6.1"
bitflags = "2.10.0"
format_no_std = "1.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "clicks-controller"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
lto = true
opt-level = "z"
incremental = false
strip = true

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

