[package]
authors = ["Lexag"]
edition = "2024"
name = "clicks-controller"
version = "0.1.0"

[dependencies]
common = { git = "https://github.com/lexag/clicks-common.git", branch = "no-std" }
#cortex-m = "0.7.7"
#cortex-m-rt = "0.7.0"
embedded-time = "0.12.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-halt = "0.2.0"
critical-section = "1.2"
ssd1306 = "0.10.0"
embedded-graphics = "0.8.1"
bitflags = "2.10.0"
format_no_std = "1.2.0"
static_cell = "2.1.1"
#embedded-hal-bus = "0.3.0"
#embedded-io-async = "0.7.0"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
postcard = "1.1.3"


embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread"] }
embassy-rp       = { version = "0.9", features = ["rp2040", "critical-section-impl", "time-driver"] }
embassy-sync     = "0.7"
embassy-net      = { version = "0.7.1", features = ["udp","tcp","proto-ipv4","dhcpv4"] }
embassy-embedded-hal = "0.5"
embassy-futures  = "0.1.2"

cortex-m = "0.7"
cortex-m-rt = "0.7"
embassy-time = "0.5.0"
embedded-hal = "1.0"
embassy-net-wiznet = "0.2.1"
embedded-hal-bus = "0.3.0"
embedded-io-async = "0.7.0"
#embassy-rp = "0.9.0"





# this lets you use `cargo fix`!
[[bin]]
name = "clicks-controller"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
lto = true
opt-level = "z"
incremental = false
strip = true

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

